--- a/gestao/templates/base.html
+++ b/gestao/templates/base.html
@@ -12,6 +12,7 @@
 	<link href="{% static 'css/style.css' %}" rel="stylesheet">
 	<link href="{% static 'color/default.css' %}" rel="stylesheet">
 	<link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
+	<link rel="stylesheet" href="{% static 'css/main.css' %}">
 	<!-- =======================================================
     Theme Name: Maxim
     Theme URL: https://bootstrapmade.com/maxim-free-onepage-bootstrap-theme/
@@ -22,7 +23,44 @@
 
 <body>
 
-	{% block content %} {% endblock %}
+	<div class="navbar-wrapper">
+		<div class="navbar navbar-inverse navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container">
+					<!-- Responsive navbar -->
+					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</a>
+					<h1 class="brand">
+						<a href="/gestao/">Fazenda</a>
+					</h1>
+					<!-- navigation -->
+					<nav class="pull-right nav-collapse collapse">
+						<ul id="menu-main" class="nav">
+							<li>
+								<a title="team" href="/gestao/animais/">Animais</a>
+							</li>
+							<li>
+								<a title="services" href="#">Criadores</a>
+							</li>
+							<li>
+								<a title="works" href="#">Fazenda</a>
+							</li>
+							<li>
+								<a title="team" href="#about">Sobre</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id="header-wrapper" class="header-slider">
+		{% block content %} {% endblock %}
+	</div>
 
 	<script src="{% static 'js/jquery.js' %}"></script>
 	<script src="{% static 'js/jquery.scrollTo.js' %}"></script>
