--- a/gestao/templates/base.html
+++ b/gestao/templates/base.html
@@ -43,7 +43,7 @@
 								<a title="team" href="/gestao/animais/">Animais</a>
 							</li>
 							<li>
-								<a title="services" href="#">Criadores</a>
+								<a title="services" href="/gestao/criadores/">Criadores</a>
 							</li>
 							<li>
 								<a title="works" href="#">Fazenda</a>
