Listagem das fazendas completas!

--- a/gestao/templates/base.html
+++ b/gestao/templates/base.html
@@ -46,10 +46,10 @@
 								<a title="services" href="/gestao/criadores/">Criadores</a>
 							</li>
 							<li>
-								<a title="works" href="#">Fazenda</a>
+								<a title="works" href="/gestao/fazendas/">Fazenda</a>
 							</li>
 							<li>
-								<a title="team" href="#about">Sobre</a>
+								<a title="team" href="/gestao/#about">Sobre</a>
 							</li>
 						</ul>
 					</nav>
