Pesquisa dos donos completo!

--- a/gestao/templates/base.html
+++ b/gestao/templates/base.html
@@ -40,16 +40,16 @@
 					<nav class="pull-right nav-collapse collapse">
 						<ul id="menu-main" class="nav">
 							<li>
-								<a title="team" href="/gestao/animais/">Animais</a>
+								<a href="/gestao/animais/">Animais</a>
 							</li>
 							<li>
-								<a title="services" href="/gestao/criadores/">Criadores</a>
+								<a href="/gestao/criadores/">Criadores</a>
 							</li>
 							<li>
-								<a title="works" href="/gestao/fazendas/">Fazenda</a>
+								<a href="/gestao/fazendas/">Fazenda</a>
 							</li>
 							<li>
-								<a title="team" href="/gestao/#about">Sobre</a>
+								<a href="/gestao/#about">Sobre</a>
 							</li>
 						</ul>
 					</nav>
