--- a/gestao/templates/animals/list.html
+++ b/gestao/templates/animals/list.html
@@ -2,6 +2,18 @@
 <div class="col-md-12">
     <table class="table table-list">
         <thead>
+            <div>
+                <label for="inputState">State</label>
+                <select id="inputState">
+                    <option selected>Ordenar por...</option>
+                    {% for c in form %}
+                    <option>
+                        <label for="{{c.id_for_label}}">{{c.label}}</label>
+                    </option>
+                    {% endfor %}
+                </select>
+                <button type="submit" class="btn btn-primary">Salvar</button>
+            </div>
             <tr>
                 <th>ID</th>
                 <th>Nome</th>
@@ -20,17 +32,20 @@
             <tr>
                 <td>{{animal.id}}</td>
                 <td>{{animal.name}}</th>
-                <td>{{animal.sexo}}</td>
-                <td>{{animal.tipagem}}</td>
-                <td>{{animal.fazenda}}</td>
-                <td>
-                    <a href="/gestao/animais/excluir/{{animal.id}}/">Excluir</a>
-                    |
-                    <a href="/gestao/animais/editar/{{animal.id}}/">Editar</a>
-                </td>
+                    <td>{{animal.sex}}</td>
+                    <td>{{animal.typing}}</td>
+                    <td>{{animal.farm}}</td>
+                    <td>
+                        <a href="/gestao/animais/excluir/{{animal.id}}/">Excluir</a>
+                        |
+                        <a href="/gestao/animais/editar/{{animal.id}}/">Editar</a>
+                    </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
+    <div>
+        <p class="result">Resultado: {{creators | length}} animal</p>
+    </div>
 </div>
 {% endblock %}
