--- a/gestao/templates/creators/register.html
+++ b/gestao/templates/creators/register.html
@@ -14,7 +14,7 @@
             </div>
             {% endfor %}
         </div>
-        <button type="submit" class="btn btn-primary">Salvar</button>
+        <button type="submit" class="btn btn-primary button-search">Salvar</button>
     </form>
 </div>
 {% endblock %}
