--- a/gestao/templates/farms/list.html
+++ b/gestao/templates/farms/list.html
@@ -31,7 +31,7 @@
         </tbody>
     </table>
     <div>
-        <p class="result">Resultado: {{creators | length}} fazenda(s)</p>
+        <p class="result">Resultado: {{farms | length}} fazenda(s)</p>
     </div>
 </div>
 {% endblock %}
