Terminação do Template

--- a/gestao/templates/home/home.html
+++ b/gestao/templates/home/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
 <header class="clearfix">
     <div class="logo">
-        <img src="{% static 'img/logo-image.png' %}" alt="" />
+        <img id="horse-home" src="{% static 'img/cavalo.png' %}" alt="" />
     </div>
     <div class="container">
         <div class="row">
@@ -16,6 +16,11 @@
                         <li>
                             <p class="home-slide-content">
                                 <strong>Gados</strong>
+                            </p>
+                        </li>
+                        <li>
+                            <p class="home-slide-content">
+                                <strong>Cavalos</strong>
                             </p>
                         </li>
                         <li>
@@ -60,13 +65,14 @@
                     <p>
                         Esse pequeno site foi "desenvolvido" não sei pra que, pois não necessidade alguma de criar um site que mostre os donos de
                         determinada fazenda, ou até mesmo, os animais que estão na mesma. Mas aqui está a lista dos desenvolvedores
-                        do site: </p>
+                        do site:
+                    </p>
                 </div>
             </div>
 
             <div class="span6">
                 <div class="aligncenter">
-                    <img src="{% static 'img/icons/creativity.png' %}" alt="">
+                    <img id="img-git" src="{% static 'img/git.png' %}" alt="">
                 </div>
             </div>
         </div>
@@ -74,7 +80,7 @@
             <div class="span2 offset1 flyIn animated fadeInUp">
                 <div class="people">
                     <img class="team-thumb img-circle" src="{% static 'img/team/img-1.jpg' %}" alt="">
-                    <h3>John Doe</h3>
+                    <h3>Jailsin</h3>
                     <p>
                         Art director
                     </p>
@@ -83,7 +89,7 @@
             <div class="span2 flyIn animated fadeInUp">
                 <div class="people">
                     <img class="team-thumb img-circle" src="{% static 'img/team/img-2.jpg' %}" alt="">
-                    <h3>Mike Doe</h3>
+                    <h3>Muller</h3>
                     <p>
                         Web developer
                     </p>
@@ -92,7 +98,7 @@
             <div class="span2 flyIn animated fadeInUp">
                 <div class="people">
                     <img class="team-thumb img-circle" src="{% static 'img/team/img-3.jpg' %}" alt="">
-                    <h3>Neil Doe</h3>
+                    <h3>Matheus</h3>
                     <p>
                         Web designer
                     </p>
@@ -101,7 +107,7 @@
             <div class="span2 flyIn animated fadeInUp">
                 <div class="people">
                     <img class="team-thumb img-circle" src="{% static 'img/team/img-4.jpg' %}" alt="">
-                    <h3>Mark Joe</h3>
+                    <h3>Guilherme</h3>
                     <p>
                         UI designer
                     </p>
@@ -110,7 +116,7 @@
             <div class="span2 flyIn animated fadeInUp">
                 <div class="people">
                     <img class="team-thumb img-circle" src="{% static 'img/team/img-5.jpg' %}" alt="">
-                    <h3>Stephen B</h3>
+                    <h3>Roberth</h3>
                     <p>
                         Digital imaging
                     </p>
