--- a/gestao/templates/home/home.html
+++ b/gestao/templates/home/home.html
@@ -80,7 +80,7 @@
             <div class="span2 offset1 flyIn animated fadeInUp">
                 <div class="people">
                     <img class="team-thumb img-circle" src="{% static 'img/team/img-1.jpg' %}" alt="">
-                    <h3>Jailsin</h3>
+                    <h3>Enoque</h3>
                     <p>
                         Art director
                     </p>
@@ -89,7 +89,7 @@
             <div class="span2 flyIn animated fadeInUp">
                 <div class="people">
                     <img class="team-thumb img-circle" src="{% static 'img/team/img-2.jpg' %}" alt="">
-                    <h3>Muller</h3>
+                    <h3>Bruno</h3>
                     <p>
                         Web developer
                     </p>
@@ -107,7 +107,7 @@
             <div class="span2 flyIn animated fadeInUp">
                 <div class="people">
                     <img class="team-thumb img-circle" src="{% static 'img/team/img-4.jpg' %}" alt="">
-                    <h3>Guilherme</h3>
+                    <h3>Muller</h3>
                     <p>
                         UI designer
                     </p>
@@ -116,7 +116,7 @@
             <div class="span2 flyIn animated fadeInUp">
                 <div class="people">
                     <img class="team-thumb img-circle" src="{% static 'img/team/img-5.jpg' %}" alt="">
-                    <h3>Roberth</h3>
+                    <h3>Jailsin</h3>
                     <p>
                         Digital imaging
                     </p>
