--- a/gestao/templates/creators/register.html
+++ b/gestao/templates/creators/register.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base2.html' %} {% block content %}
 <div class="row">
     <form method="POST" action="/gestao/criadores/cadastrar/">
         {% csrf_token %}
