--- a/gestao/templates/base2.html
+++ b/gestao/templates/base2.html
@@ -32,7 +32,7 @@
     <!-- Custom styles -->
 
     <!-- my css -->
-    <link rel="stylesheet" href="{% static 'admin/main.css' %}">
+    <link rel="stylesheet" href="{% static 'admin/css/main.css' %}">
 
     <link rel="stylesheet" href="{% static 'css/fullcalendar.css' %}">
     <link href="{% static 'admin/css/widgets.css' %}" rel="stylesheet">
