--- a/gestao/templates/farms/list.html
+++ b/gestao/templates/farms/list.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base2.html' %} {% load static %} {% block content %}
 <div class="col-md-12">
-    <table class="table table-list">
+    <table class="table form-farm">
         <thead>
             <tr>
                 <th>ID</th>
@@ -22,9 +22,13 @@
                     <td>{{farm.address}}</td>
                     <td>{{farm.creator}}</td>
                     <td>
-                        <a href="/gestao/fazendas/excluir/{{farm.id}}/">Excluir</a>
+                        <a href="/gestao/fazendas/editar/{{farm.id}}/" title="Editar">
+                            <img src="{% static 'admin/img/edit.png' %}">
+                        </a>
                         |
-                        <a href="/gestao/fazendas/editar/{{farm.id}}/">Editar</a>
+                        <a href="/gestao/fazendas/excluir/{{farm.id}}/" title="Remover">
+                            <img src="{% static 'admin/img/trash.png' %}">
+                        </a>
                     </td>
             </tr>
             {% endfor %}
