--- a/gestao/templates/animals/list.html
+++ b/gestao/templates/animals/list.html
@@ -1,5 +1,5 @@
 {% extends 'base2.html' %} {% load static %} {% block content %}
-<div class="col-md-12">
+<div class="container">
     <table class="table">
         <thead>
             <div>
@@ -14,8 +14,8 @@
                             <option value="typing">Tipagem</option>
                             <option value="farm">Fazenda</option>
                         </select>
+                        <button type="submit" class="btn btn-primary submit">Ok</button>
                     </div>
-                    <button type="submit" class="btn btn-primary">Salvar</button>
                 </form>
             </div>
             <tr>
