--- a/gestao/templates/animals/edit.html
+++ b/gestao/templates/animals/edit.html
@@ -1,20 +1,26 @@
 {% extends 'base2.html' %} {% block content %}
-<div class="row">
+<div class="container">
     <form method="POST" action="/gestao/animais/editar/{{animal.id}}/">
         {% csrf_token %}
-        <div class="form-row">
-            {% for c in form %}
-            <div class="form-group col-md-6">
-                <label for="{{c.id_for_label}}">{{c.label}}</label>
-                {{c}} {% for error in c.errors %}
-                <div>
-                    <p class="error">{{error}}</p>
-                </div>
-                {% endfor %}
+        <div>
+            <div class="form-group">
+                <label for="{{form.name.id_for_label}}">Nome</label>
+                {{form.name}}
             </div>
-            {% endfor %}
+            <div class="form-group">
+                <label for="{{form.sex.id_for_label}}">Sexo</label>
+                {{form.sex}}
+            </div>
+            <div class="form-group">
+                <label for="{{form.typing.id_for_label}}">Tipagem</label>
+                {{form.typing}}
+            </div>
+            <div class="form-group">
+                <label for="{{form.farm.id_for_label}}">Fazenda</label>
+                {{form.farm}}
+            </div>
+            <button type="submit" class="btn btn-primary submit-filter">Salvar</button>
         </div>
-        <button type="submit" class="btn btn-primary">Salvar</button>
     </form>
 </div>
 {% endblock %}
