--- a/gestao/templates/farms/list.html
+++ b/gestao/templates/farms/list.html
@@ -1,5 +1,5 @@
 {% extends 'base2.html' %} {% load static %} {% block content %}
-<div class="col-md-12">
+<div class="container">
     <table class="table form-farm">
         <thead>
             <tr>
