--- a/gestao/static/admin/css/main.css
+++ b/gestao/static/admin/css/main.css
@@ -20,3 +20,16 @@
     width: 55px;
     height: 28px;
 }
+
+#edit-animal, .register-creator, .list-animal, .edit-farm, .register-farm{
+    margin-top: 30px;
+}
+
+.search-creator {
+    margin-top: 50px;
+}
+
+.button-search {
+    margin-left: -10px;
+    margin-top: 2px;
+}
