--- a/gestao/templates/animals/list.html
+++ b/gestao/templates/animals/list.html
@@ -1,59 +1,61 @@
 {% extends 'base2.html' %} {% load static %} {% block content %}
 <div class="container">
-    <table class="table">
-        <thead>
-            <div>
-                <form action="/gestao/animais/" method="post">
-                    {% csrf_token %}
-                    <div class="form-group col-md-4">
-                        <label for="inputState">Ordenação</label>
-                        <select id="inputState" name="select">
-                            <option value="id">ID</option>
-                            <option value="name">Nome</option>
-                            <option value="sex">Sexo</option>
-                            <option value="typing">Tipagem</option>
-                            <option value="farm">Fazenda</option>
-                        </select>
-                        <button type="submit" class="btn btn-primary submit">Ok</button>
-                    </div>
-                </form>
-            </div>
-            <tr>
-                <th>ID</th>
-                <th>Nome</th>
-                <th>Sexo</th>
-                <th>Tipagem</th>
-                <th>Fazenda</th>
-                <th>
-                    <a href="/gestao/animais/cadastrar/">
-                        <button type="button" class="btn btn-primary">Novo</button>
-                    </a>
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for animal in animals %}
-            <tr>
-                <td>{{animal.id}}</td>
-                <td>{{animal.name}}</th>
-                    <td>{{animal.sex}}</td>
-                    <td>{{animal.typing}}</td>
-                    <td>{{animal.farm}}</td>
-                    <td>
-                        <a href="/gestao/animais/editar/{{animal.id}}/" title="Editar">
-                            <img src="{% static 'admin/img/edit.png' %}">
+    <div class="list-animal">
+        <table class="table">
+            <thead>
+                <div>
+                    <form action="/gestao/animais/" method="post">
+                        {% csrf_token %}
+                        <div class="form-group col-md-4">
+                            <label for="inputState">Ordenação</label>
+                            <select id="inputState" name="select">
+                                <option value="id">ID</option>
+                                <option value="name">Nome</option>
+                                <option value="sex">Sexo</option>
+                                <option value="typing">Tipagem</option>
+                                <option value="farm">Fazenda</option>
+                            </select>
+                            <button type="submit" class="btn btn-primary submit">Ok</button>
+                        </div>
+                    </form>
+                </div>
+                <tr>
+                    <th>ID</th>
+                    <th>Nome</th>
+                    <th>Sexo</th>
+                    <th>Tipagem</th>
+                    <th>Fazenda</th>
+                    <th>
+                        <a href="/gestao/animais/cadastrar/">
+                            <button type="button" class="btn btn-primary">Novo</button>
                         </a>
-                        |
-                        <a href="/gestao/animais/excluir/{{animal.id}}/" title="Remover">
-                            <img src="{% static 'admin/img/trash.png' %}">
-                        </a>
-                    </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <div>
-        <p class="result">Resultado: {{animals | length}} animal</p>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for animal in animals %}
+                <tr>
+                    <td>{{animal.id}}</td>
+                    <td>{{animal.name}}</th>
+                        <td>{{animal.sex}}</td>
+                        <td>{{animal.typing}}</td>
+                        <td>{{animal.farm}}</td>
+                        <td>
+                            <a href="/gestao/animais/editar/{{animal.id}}/" title="Editar">
+                                <img src="{% static 'admin/img/edit.png' %}">
+                            </a>
+                            |
+                            <a href="/gestao/animais/excluir/{{animal.id}}/" title="Remover">
+                                <img src="{% static 'admin/img/trash.png' %}">
+                            </a>
+                        </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <div>
+            <p class="result">Resultado: {{animals | length}} animal</p>
+        </div>
     </div>
 </div>
 {% endblock %}
