--- a/gestao/templates/animals/register.html
+++ b/gestao/templates/animals/register.html
@@ -1,20 +1,28 @@
 {% extends 'base2.html' %} {% block content %}
-<div class="row">
-    <form method="POST" action="/gestao/animais/cadastrar/">
-        {% csrf_token %}
-        <div class="form-row">
-            {% for c in form %}
-            <div class="form-group col-md-6">
-                <label for="{{c.id_for_label}}">{{c.label}}</label>
-                {{c}} {% for error in c.errors %}
-                <div>
-                    <p class="error">{{error}}</p>
+<div class="container">
+    <div class="register-creator">
+        <form method="POST" action="/gestao/animais/cadastrar/">
+            {% csrf_token %}
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="{{form.name.id_for_label}}">Nome</label>
+                    {{form.name}}
                 </div>
-                {% endfor %}
+                <div class="form-group col-md-6">
+                    <label for="{{form.sex.id_for_label}}">Sexo</label>
+                    {{form.sex}}
+                </div>
+                <div class="form-group">
+                    <label for="{{form.typing.id_for_label}}">Tipagem</label>
+                    {{form.typing}}
+                </div>
+                <div class="form-group">
+                    <label for="{{form.farm.id_for_label}}">Fazenda</label>
+                    {{form.farm}}
+                </div>
+                <button type="submit" class="btn btn-primary">Salvar</button>
             </div>
-            {% endfor %}
-        </div>
-        <button type="submit" class="btn btn-primary button-search">Salvar</button>
-    </form>
+        </form>
+    </div>
 </div>
 {% endblock %}
