--- a/gestao/templates/creators/edit.html
+++ b/gestao/templates/creators/edit.html
@@ -1,20 +1,24 @@
 {% extends 'base2.html' %} {% block content %}
-<div class="row">
-    <form method="POST" action="/gestao/criadores/editar/{{creator.id}}/">
-        {% csrf_token %}
-        <div class="form-row">
-            {% for c in form %}
-            <div class="form-group col-md-6">
-                <label for="{{c.id_for_label}}">{{c.label}}</label>
-                {{c}} {% for error in c.errors %}
-                <div>
-                    <p class="error">{{error}}</p>
+<div class="container">
+    <div class="register-creator">
+            <form method="POST" action="/gestao/criadores/editar/{{creator.id}}/">
+            {% csrf_token %}
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="{{form.name.id_for_label}}">Nome</label>
+                    {{form.name}}
                 </div>
-                {% endfor %}
+                <div class="form-group col-md-6">
+                    <label for="{{form.cpf.id_for_label}}">CPF</label>
+                    {{form.cpf}}
+                </div>
+                <div class="form-group">
+                    <label for="{{form.typing.id_for_label}}">Data de Nascimento</label>
+                    {{form.date_birth}}
+                </div>
+                <button type="submit" class="btn btn-primary">Salvar</button>
             </div>
-            {% endfor %}
-        </div>
-        <button type="submit" class="btn btn-primary">Salvar</button>
-    </form>
+        </form>
+    </div>
 </div>
 {% endblock %}
