--- a/gestao/templates/creators/edit.html
+++ b/gestao/templates/creators/edit.html
@@ -1,20 +1,32 @@
 {% extends 'base2.html' %} {% block content %}
 <div class="container">
     <div class="register-creator">
-            <form method="POST" action="/gestao/criadores/editar/{{creator.id}}/">
+        <form method="POST" action="/gestao/criadores/editar/{{creator.id}}/">
             {% csrf_token %}
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="{{form.name.id_for_label}}">Nome</label>
-                    {{form.name}}
+                    {{form.name}} {% for error in form.name.errors %}
+                    <div>
+                        <p class="error">{{error}}</p>
+                    </div>
+                    {% endfor %}
                 </div>
                 <div class="form-group col-md-6">
                     <label for="{{form.cpf.id_for_label}}">CPF</label>
-                    {{form.cpf}}
+                    {{form.cpf}} {% for error in form.cpf.errors %}
+                    <div>
+                        <p class="error">{{error}}</p>
+                    </div>
+                    {% endfor %}
                 </div>
                 <div class="form-group">
                     <label for="{{form.typing.id_for_label}}">Data de Nascimento</label>
-                    {{form.date_birth}}
+                    {{form.date_birth}} {% for error in form.date_birth.errors %}
+                    <div>
+                        <p class="error">{{error}}</p>
+                    </div>
+                    {% endfor %}
                 </div>
                 <button type="submit" class="btn btn-primary">Salvar</button>
             </div>
