--- a/gestao/templates/farms/register.html
+++ b/gestao/templates/farms/register.html
@@ -6,15 +6,27 @@
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="{{form.name.id_for_label}}">Nome</label>
-                    {{form.name}}
+                    {{form.name}} {% for error in form.name.errors %}
+                    <div>
+                        <p class="error">{{error}}</p>
+                    </div>
+                    {% endfor %}
                 </div>
                 <div class="form-group col-md-6">
                     <label for="{{form.cpf.id_for_label}}">CPF</label>
-                    {{form.address}}
+                    {{form.address}} {% for error in form.address.errors %}
+                    <div>
+                        <p class="error">{{error}}</p>
+                    </div>
+                    {% endfor %}
                 </div>
                 <div class="form-group">
                     <label for="{{form.creator.id_for_label}}">Criador</label>
-                    {{form.creator}}
+                    {{form.creator}} {% for error in form.creator.errors %}
+                    <div>
+                        <p class="error">{{error}}</p>
+                    </div>
+                    {% endfor %}
                 </div>
                 <button type="submit" class="btn btn-primary">Salvar</button>
             </div>
