--- a/gestao/templates/creators/list.html
+++ b/gestao/templates/creators/list.html
@@ -1,50 +1,53 @@
 {% extends 'base2.html' %} {% load static %} {% block content %}
 <div class="container">
-    <table class="table table-list">
-        <thead>
-            <form method="POST" action="/gestao/criadores/">
-                {% csrf_token %}
-                <div class="search-creator">
-                    <div class="form-group col-md-3">
-                        <input type="text" class="form-control" name="name" placeholder="Nome do Criador">
+    <div class="list-creator">
+        <table class="table table-list">
+            <thead>
+                <form method="POST" action="/gestao/criadores/">
+                    {% csrf_token %}
+                    <div class="search-creator">
+                        <div class="form-group col-md-3">
+                            <input type="text" class="form-control" name="name" placeholder="Nome do Criador">
+                        </div>
                     </div>
-                </div>
-                <button type="submit" class="btn btn-primary button-search">Procurar</button>
-            </form>
-            <tr>
-                <th>ID</th>
-                <th>Nome</th>
-                <th>CPF</th>
-                <th>Data Nascimento</th>
-                <th>
-                    <a href="/gestao/criadores/cadastrar/">
-                        <button type="button" class="btn btn-primary">Novo</button>
-                    </a>
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for creator in creators %}
-            <tr>
-                <td>{{creator.id}}</td>
-                <td>{{creator.name}}</th>
-                    <td>{{creator.cpf}}</td>
-                    <td>{{creator.date_birth}}</td>
-                    <td>
-                        <a href="/gestao/criadores/editar/{{creator.id}}/" title="Editar">
-                            <img src="{% static 'admin/img/edit.png' %}">
+                    <button type="submit" class="btn btn-primary button-search">Procurar</button>
+                </form>
+                <tr>
+                    <th>ID</th>
+                    <th>Nome</th>
+                    <th>CPF</th>
+                    <th>Data Nascimento</th>
+                    <th>
+                        <a href="/gestao/criadores/cadastrar/">
+                            <button type="button" class="btn btn-primary">Novo</button>
                         </a>
-                        |
-                        <a href="/gestao/criadores/excluir/{{creator.id}}/" title="Remover">
-                            <img src="{% static 'admin/img/trash.png' %}">
-                        </a>
-                    </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <div>
-        <p class="result">Resultado: {{creators | length}} criador(es)</p>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for creator in creators %}
+                <tr>
+                    <td>{{creator.id}}</td>
+                    <td>{{creator.name}}</th>
+                        <td>{{creator.cpf}}</td>
+                        <td>{{creator.date_birth}}</td>
+                        <td>
+                            <a href="/gestao/criadores/editar/{{creator.id}}/" title="Editar">
+                                <img src="{% static 'admin/img/edit.png' %}">
+                            </a>
+                            |
+                            <a href="/gestao/criadores/excluir/{{creator.id}}/" title="Remover">
+                                <img src="{% static 'admin/img/trash.png' %}">
+                            </a>
+                        </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <div>
+            <p class="result">Resultado: {{creators | length}} criador(es)</p>
+        </div>
     </div>
 </div>
+
 {% endblock %}
