--- a/gestao/templates/farms/list.html
+++ b/gestao/templates/farms/list.html
@@ -1,41 +1,43 @@
 {% extends 'base2.html' %} {% load static %} {% block content %}
 <div class="container">
-    <table class="table form-farm">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Nome</th>
-                <th>Endereço</th>
-                <th>Criador</th>
-                <th>
-                    <a href="/gestao/fazendas/cadastrar/">
-                        <button type="button" class="btn btn-primary">Novo</button>
-                    </a>
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for farm in farms %}
-            <tr>
-                <td>{{farm.id}}</td>
-                <td>{{farm.name}}</th>
-                    <td>{{farm.address}}</td>
-                    <td>{{farm.creator}}</td>
-                    <td>
-                        <a href="/gestao/fazendas/editar/{{farm.id}}/" title="Editar">
-                            <img src="{% static 'admin/img/edit.png' %}">
+    <div class="list-form">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Nome</th>
+                    <th>Endereço</th>
+                    <th>Criador</th>
+                    <th>
+                        <a href="/gestao/fazendas/cadastrar/">
+                            <button type="button" class="btn btn-primary">Novo</button>
                         </a>
-                        |
-                        <a href="/gestao/fazendas/excluir/{{farm.id}}/" title="Remover">
-                            <img src="{% static 'admin/img/trash.png' %}">
-                        </a>
-                    </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <div>
-        <p class="result">Resultado: {{farms | length}} fazenda(s)</p>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for farm in farms %}
+                <tr>
+                    <td>{{farm.id}}</td>
+                    <td>{{farm.name}}</th>
+                        <td>{{farm.address}}</td>
+                        <td>{{farm.creator}}</td>
+                        <td>
+                            <a href="/gestao/fazendas/editar/{{farm.id}}/" title="Editar">
+                                <img src="{% static 'admin/img/edit.png' %}">
+                            </a>
+                            |
+                            <a href="/gestao/fazendas/excluir/{{farm.id}}/" title="Remover">
+                                <img src="{% static 'admin/img/trash.png' %}">
+                            </a>
+                        </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <div>
+            <p class="result">Resultado: {{farms | length}} fazenda(s)</p>
+        </div>
     </div>
 </div>
 {% endblock %}
