Duas palavras: para béns

--- a/gestao/templates/animals/register.html
+++ b/gestao/templates/animals/register.html
@@ -3,8 +3,8 @@
     <div class="register-creator">
         <form method="POST" action="/gestao/animais/cadastrar/">
             {% csrf_token %}
-            <div class="form-row">
-                <div class="form-group col-md-6">
+            <div class="row">
+                <div class="col-md-6">
                     <label for="{{form.name.id_for_label}}">Nome</label>
                     {{form.name}} {% for error in form.name.errors %}
                     <div>
@@ -12,7 +12,7 @@
                     </div>
                     {% endfor %}
                 </div>
-                <div class="form-group col-md-6">
+                <div class="col-md-6">
                     <label for="{{form.sex.id_for_label}}">Sexo</label>
                     {{form.sex}} {% for error in form.sex.errors %}
                     <div>
@@ -20,7 +20,9 @@
                     </div>
                     {% endfor %}
                 </div>
-                <div class="form-group">
+            </div>
+            <div class="row">
+                <div class="form-group col-md-12">
                     <label for="{{form.typing.id_for_label}}">Tipagem</label>
                     {{form.typing}} {% for error in form.typing.errors %}
                     <div>
@@ -28,7 +30,7 @@
                     </div>
                     {% endfor %}
                 </div>
-                <div class="form-group">
+                <div class="form-group col-md-12">
                     <label for="{{form.farm.id_for_label}}">Fazenda</label>
                     {{form.farm}} {% for error in form.farm.errors %}
                     <div>
@@ -36,7 +38,7 @@
                     </div>
                     {% endfor %}
                 </div>
-                <button type="submit" class="btn btn-primary">Salvar</button>
+                <button type="submit" class="btn btn-primary crud-button">Salvar</button>
             </div>
         </form>
     </div>
