--- a/gestao/templates/creators/edit.html
+++ b/gestao/templates/creators/edit.html
@@ -3,8 +3,8 @@
     <div class="register-creator">
         <form method="POST" action="/gestao/criadores/editar/{{creator.id}}/">
             {% csrf_token %}
-            <div class="form-row">
-                <div class="form-group col-md-6">
+            <div class="row">
+                <div class="col-md-6">
                     <label for="{{form.name.id_for_label}}">Nome</label>
                     {{form.name}} {% for error in form.name.errors %}
                     <div>
@@ -12,7 +12,7 @@
                     </div>
                     {% endfor %}
                 </div>
-                <div class="form-group col-md-6">
+                <div class="col-md-6">
                     <label for="{{form.cpf.id_for_label}}">CPF</label>
                     {{form.cpf}} {% for error in form.cpf.errors %}
                     <div>
@@ -20,7 +20,9 @@
                     </div>
                     {% endfor %}
                 </div>
-                <div class="form-group">
+            </div>
+            <div class="row">
+                <div class="form-group col-md-12">
                     <label for="{{form.typing.id_for_label}}">Data de Nascimento</label>
                     {{form.date_birth}} {% for error in form.date_birth.errors %}
                     <div>
@@ -28,7 +30,7 @@
                     </div>
                     {% endfor %}
                 </div>
-                <button type="submit" class="btn btn-primary">Salvar</button>
+                <button type="submit" class="btn btn-primary crud-button">Salvar</button>
             </div>
         </form>
     </div>
