--- a/gestao/templates/farms/edit.html
+++ b/gestao/templates/farms/edit.html
@@ -1,10 +1,10 @@
 {% extends 'base2.html' %} {% block content %}
 <div class="container">
     <div class="edit-farm">
-            <form method="POST" action="/gestao/fazendas/editar/{{farm.id}}/">
+        <form method="POST" action="/gestao/fazendas/editar/{{farm.id}}/">
             {% csrf_token %}
-            <div class="form-row">
-                <div class="form-group col-md-6">
+            <div class="row">
+                <div class="col-md-6">
                     <label for="{{form.name.id_for_label}}">Nome</label>
                     {{form.name}} {% for error in form.name.errors %}
                     <div>
@@ -12,7 +12,7 @@
                     </div>
                     {% endfor %}
                 </div>
-                <div class="form-group col-md-6">
+                <div class="col-md-6">
                     <label for="{{form.cpf.id_for_label}}">CPF</label>
                     {{form.address}} {% for error in form.address.errors %}
                     <div>
@@ -20,7 +20,9 @@
                     </div>
                     {% endfor %}
                 </div>
-                <div class="form-group">
+            </div>
+            <div class="row">
+                <div class="form-group col-md-12">
                     <label for="{{form.creator.id_for_label}}">Criador</label>
                     {{form.creator}} {% for error in form.creator.errors %}
                     <div>
@@ -28,7 +30,7 @@
                     </div>
                     {% endfor %}
                 </div>
-                <button type="submit" class="btn btn-primary">Salvar</button>
+                <button type="submit" class="btn btn-primary crud-button">Salvar</button>
             </div>
         </form>
     </div>
