--- a/gestao/templates/base2.html
+++ b/gestao/templates/base2.html
@@ -73,13 +73,13 @@
                         <nav class="pull-right nav-collapse collapse">
                             <ul id="menu-main" class="nav">
                                 <li>
-                                    <a href="/gestao/animais/">Animais</a>
+                                    <a href="/gestao/animals/">Animais</a>
                                 </li>
                                 <li>
-                                    <a href="/gestao/criadores/">Criadores</a>
+                                    <a href="/gestao/creators/">Criadores</a>
                                 </li>
                                 <li>
-                                    <a href="/gestao/fazendas/">Fazenda</a>
+                                    <a href="/gestao/farms/">Fazenda</a>
                                 </li>
                                 <li>
                                     <a href="/gestao/#about">Sobre</a>
