--- a/gestao/templates/animals/list.html
+++ b/gestao/templates/animals/list.html
@@ -3,21 +3,23 @@
     <div class="list-animal">
         <table class="table">
             <thead>
-                <div>
-                    <form action="/gestao/animais/" method="post">
-                        {% csrf_token %}
-                        <div class="form-group col-md-4">
-                            <label for="inputState">Ordenação</label>
-                            <select id="inputState" name="select">
-                                <option value="id">ID</option>
-                                <option value="name">Nome</option>
-                                <option value="sex">Sexo</option>
-                                <option value="typing">Tipagem</option>
-                                <option value="farm">Fazenda</option>
-                            </select>
-                            <button type="submit" class="btn btn-primary submit">Ok</button>
-                        </div>
-                    </form>
+                <div class="row">
+                    <div class="col-md-12">
+                        <form action="/gestao/animals/" method="post">
+                            {% csrf_token %}
+                            <div class="form-group col-md-4">
+                                <label for="inputState">Ordenação</label>
+                                <select id="inputState" name="select">
+                                    <option value="id">ID</option>
+                                    <option value="name">Nome</option>
+                                    <option value="sex">Sexo</option>
+                                    <option value="typing">Tipagem</option>
+                                    <option value="farm">Fazenda</option>
+                                </select>
+                                <button type="submit" class="btn btn-primary submit">Ok</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
                 <tr>
                     <th>ID</th>
@@ -26,7 +28,7 @@
                     <th>Tipagem</th>
                     <th>Fazenda</th>
                     <th>
-                        <a href="/gestao/animais/cadastrar/">
+                        <a href="/gestao/animals/register/">
                             <button type="button" class="btn btn-primary">Novo</button>
                         </a>
                     </th>
@@ -41,11 +43,11 @@
                         <td>{{animal.typing}}</td>
                         <td>{{animal.farm}}</td>
                         <td>
-                            <a href="/gestao/animais/editar/{{animal.id}}/" title="Editar">
+                            <a href="/gestao/animals/edit/{{animal.id}}/" title="Editar">
                                 <img src="{% static 'admin/img/edit.png' %}">
                             </a>
                             |
-                            <a href="/gestao/animais/excluir/{{animal.id}}/" title="Remover">
+                            <a href="/gestao/animals/delete/{{animal.id}}/" title="Remover">
                                 <img src="{% static 'admin/img/trash.png' %}">
                             </a>
                         </td>
