--- a/gestao/templates/base.html
+++ b/gestao/templates/base.html
@@ -29,6 +29,7 @@
 					</a>
 					<h1 class="brand">
 						<a href="/gestao/">Fazenda</a>
+						<p>Você é o visitante do número: {{request.session.contagem}}</p>
 					</h1>
 					<!-- navigation -->
 					<nav class="pull-right nav-collapse collapse">
