--- a/gestao/templates/base2.html
+++ b/gestao/templates/base2.html
@@ -24,8 +24,8 @@
     <link href="{% static 'admin/assets/fullcalendar/fullcalendar/bootstrap-fullcalendar.css' %}" rel="stylesheet" />
     <link href="{% static 'admin/assets/fullcalendar/fullcalendar/fullcalendar.css' %}" rel="stylesheet" />
     <!-- easy pie chart-->
-    <link href="{% static 'admin/assets/jquery-easy-pie-chart/jquery.easy-pie-chart.css' %}" rel="stylesheet" type="text/css"
-        media="screen" />
+    <link href="{% static 'admin/assets/jquery-easy-pie-chart/jquery.easy-pie-chart.css' %}" rel="stylesheet"
+        type="text/css" media="screen" />
     <!-- owl carousel -->
     <link rel="stylesheet" href="{% static 'admin/css/owl.carousel.css' %}" type="text/css">
     <link href="{% static 'admin/css/jquery-jvectormap-1.2.2.css' %}" rel="stylesheet">
@@ -68,6 +68,7 @@
                         </a>
                         <h1 class="brand">
                             <a href="/gestao/">Fazenda</a>
+                            <p>Você é o visitante do número: {{request.session.contagem}}</p>
                         </h1>
                         <!-- navigation -->
                         <nav class="pull-right nav-collapse collapse">
