--- a/gestao/templates/creators/list.html
+++ b/gestao/templates/creators/list.html
@@ -33,17 +33,19 @@
                 <tr>
                     <td>{{creator.id}}</td>
                     <td>{{creator.name}}</th>
-                        <td>{{creator.cpf}}</td>
-                        <td>{{creator.date_birth}}</td>
-                        <td>
-                            <a href="/gestao/creators/edit/{{creator.id}}/" title="Editar">
-                                <img src="{% static 'admin/img/edit.png' %}">
-                            </a>
-                            |
-                            <a href="/gestao/creators/delete/{{creator.id}}/" title="Remover">
-                                <img src="{% static 'admin/img/trash.png' %}">
-                            </a>
-                        </td>
+                    <td>{{creator.cpf}}</td>
+                    <td>{{creator.date_birth}}</td>
+                    <td>
+                        <a type="button" class="btn btn-primary" href="/gestao/creators/edit/{{creator.id}}/"
+                            title="Editar">
+                            <img src="{% static 'admin/img/edit.png' %}">
+                        </a>
+                        |
+                        <a type="button" class="btn btn-primary" href="/gestao/creators/delete/{{creator.id}}/"
+                            title="Remover">
+                            <img src="{% static 'admin/img/trash.png' %}">
+                        </a>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
