--- a/gestao/templates/home/home.html
+++ b/gestao/templates/home/home.html
@@ -59,6 +59,7 @@
         <div class="row">
             <div class="span4 offset1">
                 <div>
+                    <p>Você é o visitante do número: {{request.session.contagem}}</p>
                     <h2> O amor por fazendas é
                         <strong>grande</strong>
                     </h2>
