Implementação do 'Esqueci a senha?'

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -16,6 +16,7 @@
             </table>
 
             <input type="submit">
+            <a href="{% url 'password_reset' %}">Esqueceu a senha ?</a>
         </form>
     </div>
 </div>
