--- a/gestao/templates/base.html
+++ b/gestao/templates/base.html
@@ -48,12 +48,12 @@
 							<li>
 								<a href="/gestao/#about">Sobre</a>
 							</li>
-							{% if not request.user.username %}
+							{% if not user.is_authenticated %}
 							<li>
 								<a href="/accounts/login/">Login</a>
 							</li>
 							{% endif %}
-							{% if request.user.username %}
+							{% if user.is_authenticated %}
 							<li>
 								<a href="/accounts/logout/">Logout</a>
 							</li>
