--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,9 +1,13 @@
 {% extends 'base2.html' %}
 {% block content %}
-<h1>
-    Verifique o seu Email!
-</h1>
-<p>Você será notificado com uma mensagem no seu Email, clique no Link 
-    para completar a sua redefinição de senha.
-</p>
+<div class="container">
+    <div class="login">
+        <h1>
+            Verifique o seu Email!
+        </h1>
+        <p>Você será notificado com uma mensagem no seu Email, clique no Link
+            para completar a sua redefinição de senha.
+        </p>
+    </div>
+</div>
 {% endblock %}
