--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,6 +1,9 @@
 {% extends 'base2.html' %}
-
 {% block content %}
-<h1>Senha Redefinida com sucesso!</h1>
-<p>Sua sua foi redefinida. Tente o login com a nova senha.</a>.</p>
+<div class="container">
+    <div class="login">
+        <h1>Senha Redefinida com sucesso!</h1>
+        <p>Sua sua foi redefinida. Tente o login com a nova senha.</a>.</p>
+    </div>
+</div>
 {% endblock %}
