--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,9 +1,13 @@
 {% extends 'base2.html' %}
 {% block content %}
-<h1>Insira a sua nova senha</h1>
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Change my password">
-</form>
+<div class="container">
+    <div class="login">
+        <h1>Insira a sua nova senha</h1>
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="Change my password">
+        </form>
+    </div>
+</div>
 {% endblock %}
